[tool.poetry]
name = "probabilistic_automata"
readme="README.md"
version = "0.1.0"
description = "Python library for manipulating probabilistic automata."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/probabilistic_automata"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
