[tool.poetry]
name = "probabilistic_automata"
readme="README.md"
version = "0.4.1"
description = "Python library for manipulating probabilistic automata."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/probabilistic_automata"
license = "MIT"
packages = [
    { include = "probabilistic_automata" },
]

[tool.poetry.dependencies]
python = "^3.7"
funcy = "^1.14"
dfa = "^2.1.0"
attrs = "^20.0.0"
lenses = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
codecov = "^2.0.16"
hypothesis = "^5.5.4"
pdoc3 = "^0.7.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
